# gh-reviewers-graph

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  gh-reviewers-graph  index.html  page-template.html  pyproject.toml  schema.json
.github/workflows/: ci.yml  update-pages.yml
LadybirdBrowser/ladybird/: data.json  index.html
WebKit/WebKit/: data.json  index.html
denoland/deno/: data.json  index.html
mdn/content/: data.json  index.html
servo/servo/: data.json  index.html
tests/: conftest.py  test_aggregation.py  test_bot_filter.py  test_cache.py  test_cli.py  test_fetch.py  test_graphql.py  test_main.py  test_month_ranges.py  test_output.py  test_rate_limit.py  test_schema.py
tests/e2e/: conftest.py  test_page.py
w3c/csswg-drafts/: data.json  index.html
web-platform-tests/wpt/: data.json  index.html
whatwg/html/: data.json  index.html
